tests/sqlite/ui-common/caveat_string_literal_colon.stderr
error: sql_forge!: parameter :def has no mapping
 --> tests/sqlite/tmp-ui/caveat_string_literal_colon.rs:8:9
  |
8 |         r#"SELECT id, name FROM users WHERE name = "abc:def""#,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
